fix of userStats not showing names

--- a/www/themes/default/style.css
+++ b/www/themes/default/style.css
@@ -1,111 +1,138 @@
 html {
     box-sizing: border-box;
 }
+
 *, *:before, *:after {
     box-sizing: inherit;
 }
-body, figure {
+
+body {
+    background: #e6ebf1;
+    font-family: Roboto, sans-serif;
+}
+
+.app {
+    max-width: 800px;
+    padding: 40px;
+    margin: 0 auto;
+}
+
+h1 {
+    margin: 0;
+    font-size: 18px;
+    text-align: center;
+}
+
+img {
+    border-radius: 50%;
+    display: block;
+}
+
+.scoreboard {
+    perspective: 800px;
+    margin-top: 16px;
+}
+
+.scoreboard__user {
+    background: white;
+    border-radius: 5px;
+    box-shadow: 0 7px 14px 0 rgba(50,50,93,.1), 0 3px 6px 0 rgba(0,0,0,.07);
+    overflow: hidden;
+    margin-top: 16px;
+    transition: .3s transform cubic-bezier(0.680, -0.550, 0.265, 1.550), .3s opacity;
+    opacity: 0;
+    transform: translate3d(0, -20px, 0) rotateX(45deg);
+    transform-style: preserve-3d;
+    position: relative;
+}
+
+.scoreboard__user.display {
+    opacity: 1;
+    transform: translate3d(0, 0, 0) rotateX(0);
+}
+
+.scoreboard__user.displayed {
+    transition: 1s transform cubic-bezier(0.680, -0.550, 0.265, 1.550), .3s opacity;
+}
+
+.scoreboard__user__row {
+    display: flex;
+    align-items: center;
+    height: 94px;
+    padding: 16px 0;
+}
+
+.scoreboard__user__row div {
+    padding: 0 24px;
+    flex: 1;
+}
+
+    .scoreboard__user__row div:first-child {
+        padding-right: 0;
+        flex-grow: 0;
+    }
+
+    .scoreboard__user__row div:last-child {
+        flex-grow: 0;
+        text-align: right;
+        padding-left: 0;
+    }
+
+.scoreboard__user__summary {
+    cursor: pointer;
+}
+
+.scoreboard__user__stats {
+    display: flex;
+    height: 0;
+    overflow: hidden;
+    transition: .3s height cubic-bezier(0.680, -0.550, 0.265, 1.550);
+    border-top: 1px dashed #e6ebf1;
+}
+
+.scoreboard__user__stats__column {
+    flex: 1;
+    padding: 20px;
+}
+
+.scoreboard__user__stats__title {
+    display: block;
+}
+
+.scoreboard__user__stats__list {
+    list-style: none;
+    padding: 0;
     margin: 0;
 }
-h1, h2, h3, h4, h5, h6, th, td, caption { font-weight:normal; }
-img {
-    border: 0;
+
+.scoreboard__user__stats__list > li {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
 }
 
-html, body {
-    height: 100%;
-    background: #F9FFFF;
-    font-size: 15px;
-    border-top: 2px solid #161616;
+.scoreboard__user__stats__list img {
+    display: block;
+    flex-shrink: 0;
+    margin-right: 10px;
 }
 
-a {
-    color: rgba(255,255,255,0.7);
-    text-decoration: none;
-}
-table {
-    border-collapse: collapse;
-  }
-
-table tr th {
-    text-align: left;
-    margin-left: 25px;
-}
-header p {
-    font-size: 22px;
-    margin-left: 250px;
-    font-family: 'Roboto', sans-serif;
-}
-#app {
-    width: 800px;
-    height: auto;
-    margin: auto;
-
+.scoreboard__user__stats__list strong {
+    flex: 1;
+    font-weight: normal;
 }
 
-.row {
-    width: auto;
-    height: 48px;
-    border-bottom: 2px solid #E0E5E5;
+.score {
+    display: inline-block;
+    font-weight: 700;
+    color: #5969e2;
+    font-size: 24px;
 }
 
-.avatar {
-    width: 48px;
-    height: 48px;
-}
-.avatar img {
-    border-radius: 50px;
-}
-.name {
-    height: 48px;
-}
-.name p {
-    margin-left: 25px;
-    font-family: 'Roboto', sans-serif;
+.score.good {
+    color: #45CB85;
 }
 
-.score{
-    height: 48px;
-}
-.score p {
-    font-family: 'Roboto', sans-serif;
-    margin-left: 25px;
-}
-#hiddenBox {
-    width: 25%;
-    float: left;
-    height: 100%;
-    padding: 50px 0;
-    text-align: center;
-    background-color: lightblue;
-}
-#hiddenBox > #head > p {
-    font-family: 'Roboto', sans-serif;
-    font-size: 21px
-
-}
-
-#hiddenBox > #stats {
-    width: 98%;
-    margin: 0% 1%;
-    min-height: 100px;
-    background-color:#F9FFFF;
-    border-radius: 5px;
-
-}
-.progress {
-    margin-bottom: -1px;
-}
-
-.progress p {
-    text-align: left;
-    margin-bottom: -1px;
-    font-family: 'Roboto', sans-serif;
-}
-.bar {
-    background-color:#FFFFCC;
-}
-.bar-progress {
-    background-color: #CCE8CC;
-
+.score.bad {
+    color: #E08DAC;
 }
